# EnglishStudyHelper

./: LICENSE  README.md  pyproject.toml  test_run.py
config/: settings.json
ejdic-hand-sqlite/: ddl.sql
src/english_inflections/: english_inflections.py
src/englishstudyhelper/: __init__.py  analyzer.py  config.py  dictionary.py  main.py  reporter.py  word.py
tests/: conftest.py  test_analyzer.py  test_config.py  test_dictionary.py  test_reporter.py  test_word.py
tests_e2e/: test_dictionary_features.py  test_dictionary_format.py  test_run.py
